[gd_scene load_steps=6 format=3 uid="uid://bkgma7fjutj3f"]

[ext_resource type="Script" path="res://scenes/ui/in_game_ui/unit_summon_button.gd" id="1_jc81y"]
[ext_resource type="Texture2D" uid="uid://y2s1jhw4m0hl" path="res://scenes/units/robo_spider/robo_spider.png" id="2_423p7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppwxq"]
bg_color = Color(0, 0.368627, 0.47451, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lg3nr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4poi"]
bg_color = Color(0, 0, 0, 0.443137)

[node name="UnitSummonButton" type="Control"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jc81y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ppwxq")

[node name="UnitImage" type="Sprite2D" parent="PanelContainer"]
unique_name_in_owner = true
position = Vector2(30, 30)
texture = ExtResource("2_423p7")
offset = Vector2(2, 2)

[node name="CooldownProgress" type="ProgressBar" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_lg3nr")
theme_override_styles/fill = SubResource("StyleBoxFlat_q4poi")
max_value = 1.0
value = 0.5
fill_mode = 3
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="ManaCost" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "30
"

[node name="InteractButton" type="Button" parent="PanelContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
